--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# OpenWrt version: Attitude Adjustment (r37266)
-# Fri Jul 12 18:56:07 2013
+# OpenWrt version: Attitude Adjustment (r37559)
+# Sat Jul 27 20:24:26 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -560,7 +560,7 @@ CONFIG_FEATURE_drawing-backend_DirectFB=y
 #
 CONFIG_PACKAGE_base-files=y
 CONFIG_PACKAGE_block-mount=y
-CONFIG_EXTROOT_SETTLETIME=20
+CONFIG_EXTROOT_SETTLETIME=10
 # CONFIG_PACKAGE_bridge is not set
 CONFIG_PACKAGE_busybox=y
 # CONFIG_BUSYBOX_CONFIG_NOMMU is not set
@@ -610,7 +610,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_HAVE_RPC=y
 # CONFIG_BUSYBOX_CONFIG_PIE is not set
 CONFIG_BUSYBOX_CONFIG_LFS=y
 CONFIG_BUSYBOX_CONFIG_CROSS_COMPILER_PREFIX=""
-CONFIG_BUSYBOX_CONFIG_EXTRA_CFLAGS=""
+CONFIG_BUSYBOX_CONFIG_EXTRA_CFLAGS="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -fno-caller-saves -mno-branch-likely"
 
 #
 # Debugging Options
@@ -643,7 +643,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_FAST_TOP=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_MAX_LEN=512
 # CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_VI is not set
-CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=256
+CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=8
 # CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_TAB_COMPLETION=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_USERNAME_COMPLETION is not set
@@ -1492,7 +1492,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 # CONFIG_PACKAGE_luci-app-ltqtapi is not set
 # CONFIG_PACKAGE_luci-app-meshwizard is not set
-# CONFIG_PACKAGE_luci-app-minidlna is not set
+CONFIG_PACKAGE_luci-app-minidlna=y
 # CONFIG_PACKAGE_luci-app-mmc-over-gpio is not set
 CONFIG_PACKAGE_luci-app-multiwan=y
 # CONFIG_PACKAGE_luci-app-ntpc is not set
@@ -1509,7 +1509,7 @@ CONFIG_PACKAGE_luci-app-samba=y
 CONFIG_PACKAGE_luci-app-tinyproxy=y
 # CONFIG_PACKAGE_luci-app-transmission is not set
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-ushare=y
+# CONFIG_PACKAGE_luci-app-ushare is not set
 # CONFIG_PACKAGE_luci-app-vnstat is not set
 # CONFIG_PACKAGE_luci-app-voice-core is not set
 # CONFIG_PACKAGE_luci-app-watchcat is not set
@@ -1592,7 +1592,7 @@ CONFIG_PACKAGE_luci-lib-web=y
 # 9. Freifunk
 #
 # CONFIG_PACKAGE_freifunk-common is not set
-# CONFIG_PACKAGE_freifunk-firewall is not set
+CONFIG_PACKAGE_freifunk-firewall=y
 CONFIG_PACKAGE_freifunk-p2pblock=y
 # CONFIG_PACKAGE_freifunk-policyrouting is not set
 # CONFIG_PACKAGE_freifunk-watchdog is not set
@@ -2250,7 +2250,7 @@ CONFIG_PACKAGE_libopenssl=y
 #
 # CONFIG_PACKAGE_libpq is not set
 # CONFIG_PACKAGE_libsqlite2 is not set
-# CONFIG_PACKAGE_libsqlite3 is not set
+CONFIG_PACKAGE_libsqlite3=y
 # CONFIG_PACKAGE_pgsqlodbc is not set
 # CONFIG_PACKAGE_tokyocabinet is not set
 # CONFIG_PACKAGE_unixodbc is not set
@@ -2333,7 +2333,7 @@ CONFIG_PACKAGE_libbz2=y
 # CONFIG_PACKAGE_libdbus is not set
 # CONFIG_PACKAGE_libdbus-glib is not set
 # CONFIG_PACKAGE_libdevmapper is not set
-CONFIG_PACKAGE_libdlna=y
+# CONFIG_PACKAGE_libdlna is not set
 # CONFIG_PACKAGE_libdmapsharing is not set
 # CONFIG_PACKAGE_libdnet is not set
 # CONFIG_PACKAGE_libdvbpsi is not set
@@ -2346,7 +2346,7 @@ CONFIG_PACKAGE_libdlna=y
 # CONFIG_PACKAGE_libevent2-openssl is not set
 # CONFIG_PACKAGE_libevent2-pthreads is not set
 # CONFIG_PACKAGE_libeventlog is not set
-# CONFIG_PACKAGE_libexif is not set
+CONFIG_PACKAGE_libexif=y
 # CONFIG_PACKAGE_libexpat is not set
 # CONFIG_PACKAGE_libexslt is not set
 # CONFIG_PACKAGE_libezxml is not set
@@ -2355,7 +2355,7 @@ CONFIG_PACKAGE_libdlna=y
 # CONFIG_PACKAGE_libffi is not set
 # CONFIG_PACKAGE_libffmpeg-full is not set
 CONFIG_PACKAGE_libffmpeg-mini=y
-# CONFIG_PACKAGE_libflac is not set
+CONFIG_PACKAGE_libflac=y
 # CONFIG_PACKAGE_libfreecwmp is not set
 # CONFIG_PACKAGE_libfreefare is not set
 # CONFIG_PACKAGE_libfreenect is not set
@@ -2376,7 +2376,7 @@ CONFIG_PACKAGE_libffmpeg-mini=y
 # CONFIG_PACKAGE_libhowl is not set
 # CONFIG_PACKAGE_libiconv is not set
 # CONFIG_PACKAGE_libiconv-full is not set
-# CONFIG_PACKAGE_libid3tag is not set
+CONFIG_PACKAGE_libid3tag=y
 # CONFIG_PACKAGE_libidn is not set
 # CONFIG_PACKAGE_libiksemel is not set
 # CONFIG_PACKAGE_libimobiledevice is not set
@@ -2385,9 +2385,9 @@ CONFIG_PACKAGE_libffmpeg-mini=y
 # CONFIG_PACKAGE_libintl-full is not set
 # CONFIG_PACKAGE_libiw is not set
 CONFIG_PACKAGE_libiwinfo=y
-# CONFIG_PACKAGE_libjpeg is not set
+CONFIG_PACKAGE_libjpeg=y
 # CONFIG_PACKAGE_libjs is not set
-CONFIG_PACKAGE_libjson=y
+# CONFIG_PACKAGE_libjson is not set
 CONFIG_PACKAGE_libjson-c=y
 # CONFIG_PACKAGE_libldns is not set
 # CONFIG_PACKAGE_libleptonica is not set
@@ -2430,7 +2430,7 @@ CONFIG_PACKAGE_libnfnetlink=y
 # CONFIG_PACKAGE_libnl is not set
 CONFIG_PACKAGE_libnl-tiny=y
 # CONFIG_PACKAGE_libnmeap is not set
-# CONFIG_PACKAGE_libogg is not set
+CONFIG_PACKAGE_libogg=y
 # CONFIG_PACKAGE_liboil is not set
 # CONFIG_PACKAGE_libol is not set
 # CONFIG_PACKAGE_libopal is not set
@@ -2493,8 +2493,7 @@ CONFIG_PACKAGE_libuci=y
 CONFIG_PACKAGE_libuci-lua=y
 # CONFIG_PACKAGE_libucl is not set
 # CONFIG_PACKAGE_libunbound is not set
-CONFIG_PACKAGE_libupnp=y
-# CONFIG_PACKAGE_libupnp-sample is not set
+# CONFIG_PACKAGE_libupnp is not set
 CONFIG_PACKAGE_libusb=y
 # CONFIG_PACKAGE_libusb-1.0 is not set
 # CONFIG_PACKAGE_libusbmuxd is not set
@@ -2502,7 +2501,7 @@ CONFIG_PACKAGE_libusb=y
 CONFIG_PACKAGE_libuuid=y
 # CONFIG_PACKAGE_libv4l is not set
 # CONFIG_PACKAGE_libvncserver is not set
-# CONFIG_PACKAGE_libvorbis is not set
+CONFIG_PACKAGE_libvorbis=y
 # CONFIG_PACKAGE_libvorbisidec is not set
 # CONFIG_PACKAGE_libwrap is not set
 # CONFIG_PACKAGE_libwxbase is not set
@@ -3471,13 +3470,13 @@ CONFIG_PACKAGE_ubusd=y
 # CONFIG_PACKAGE_libgstsdp is not set
 # CONFIG_PACKAGE_libgsttag is not set
 # CONFIG_PACKAGE_libgstvideo is not set
-# CONFIG_PACKAGE_minidlna is not set
+CONFIG_PACKAGE_minidlna=y
 # CONFIG_PACKAGE_mjpg-streamer is not set
 # CONFIG_PACKAGE_motion is not set
 # CONFIG_PACKAGE_peercast is not set
 # CONFIG_PACKAGE_puppy is not set
 # CONFIG_PACKAGE_streamripper is not set
-CONFIG_PACKAGE_ushare=y
+# CONFIG_PACKAGE_ushare is not set
 # CONFIG_PACKAGE_vips is not set
 
 #
