--- a/feeds/packages/libs/libexif/Makefile
+++ b/feeds/packages/libs/libexif/Makefile
@@ -39,6 +39,8 @@ CONFIGURE_ARGS+= \
 	--disable-rpath \
 	--without-libiconv-prefix \
 	--without-libintl-prefix \
+	--disable-nls	\
+	--disable-docs	\
 
 TARGET_CFLAGS += $(FPIC)
 
