--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
-# OpenWrt version: Attitude Adjustment (r37596)
-# Mon Jul 29 21:23:12 2013
+# OpenWrt version: Attitude Adjustment (r37605)
+# Mon Jul 29 22:34:11 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -2237,7 +2237,7 @@ CONFIG_PACKAGE_libopenssl=y
 # Configuration
 #
 # CONFIG_OPENSSL_ENGINE_CRYPTO is not set
-# CONFIG_OPENSSL_THREADS is not set
+CONFIG_OPENSSL_THREADS=y
 # CONFIG_PACKAGE_libpolarssl is not set
 
 #
