--- a/package/opkg/files/opkg.conf
+++ b/package/opkg/files/opkg.conf
@@ -1,4 +1,4 @@
-src/gz %n %U
+src/gz attitude_adjustment http://downloads.openwrt.org/attitude_adjustment/12.09/ar71xx/generic/packages
 dest root /
 dest ram /tmp
 lists_dir ext /var/opkg-lists
