--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r37630)
-# Sat Aug  3 18:51:01 2013
+# Sun Aug  4 18:36:11 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -1592,7 +1592,7 @@ CONFIG_PACKAGE_luci-lib-web=y
 # 9. Freifunk
 #
 # CONFIG_PACKAGE_freifunk-common is not set
-CONFIG_PACKAGE_freifunk-firewall=y
+# CONFIG_PACKAGE_freifunk-firewall is not set
 CONFIG_PACKAGE_freifunk-p2pblock=y
 # CONFIG_PACKAGE_freifunk-policyrouting is not set
 # CONFIG_PACKAGE_freifunk-watchdog is not set
