reduce the size of e2fsprogs/libupnp/sqlite/flac/alsa-lib

--- a/feeds/packages/libs/alsa-lib/Makefile
+++ b/feeds/packages/libs/alsa-lib/Makefile
@@ -44,6 +44,8 @@ define Build/Configure
 		--without-debug \
 		$(SOFT_FLOAT_CONFIG_OPTION) \
 		--with-versioned=no \
+		--enable-symbolic-functions \
+		--disable-old-symbols \
 	)
 endef
 
