Update Optimization Flag

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r37768)
-# Sat Aug 17 23:37:57 2013
+# Sun Aug 18 19:46:24 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -509,7 +509,7 @@ CONFIG_KERNEL_GIT_LOCAL_REPOSITORY=""
 # CONFIG_BUILD_LOG is not set
 # CONFIG_SRC_TREE_OVERRIDE is not set
 CONFIG_TARGET_OPTIONS=y
-CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -mplt"
+CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -msym32"
 CONFIG_SOFT_FLOAT=y
 # CONFIG_EXTERNAL_TOOLCHAIN is not set
 CONFIG_NEED_TOOLCHAIN=y
@@ -557,7 +557,7 @@ CONFIG_UCLIBC_VERSION_0_9_33=y
 #
 # Debuggers
 #
-CONFIG_GDB=y
+# CONFIG_GDB is not set
 # CONFIG_INSIGHT is not set
 CONFIG_GCC_DEFAULT_VERSION_4_6_LINARO=y
 CONFIG_GCC_VERSION="4.6-linaro"
@@ -2245,8 +2245,8 @@ CONFIG_PACKAGE_MAC80211_MESH=y
 #
 # Filesystem
 #
-CONFIG_PACKAGE_libcom_err=y
-CONFIG_PACKAGE_libext2fs=y
+# CONFIG_PACKAGE_libcom_err is not set
+# CONFIG_PACKAGE_libext2fs is not set
 # CONFIG_PACKAGE_libfuse is not set
 # CONFIG_PACKAGE_libnfsidmap is not set
 # CONFIG_PACKAGE_libow is not set
