--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r37768)
-# Sun Aug 18 19:46:24 2013
+# Tue Aug 20 01:38:32 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -524,7 +524,7 @@ CONFIG_TOOLCHAINOPTS=y
 # CONFIG_BINUTILS_VERSION_2_21 is not set
 # CONFIG_BINUTILS_VERSION_2_21_1 is not set
 CONFIG_BINUTILS_VERSION_2_22=y
-CONFIG_EXTRA_BINUTILS_CONFIG_OPTIONS="--disable-nls"
+CONFIG_EXTRA_BINUTILS_CONFIG_OPTIONS=""
 CONFIG_BINUTILS_VERSION="2.22"
 
 #
@@ -538,9 +538,9 @@ CONFIG_GCC_VERSION_4_6_LINARO=y
 # CONFIG_GCC_VERSION_4_7_LINARO is not set
 # CONFIG_GCC_VERSION_LLVM is not set
 # CONFIG_GCC_USE_GRAPHITE is not set
-CONFIG_EXTRA_GCC_CONFIG_OPTIONS="--disable-nls"
+CONFIG_EXTRA_GCC_CONFIG_OPTIONS=""
 # CONFIG_SSP_SUPPORT is not set
-CONFIG_TLS_SUPPORT=y
+# CONFIG_TLS_SUPPORT is not set
 # CONFIG_SJLJ_EXCEPTIONS is not set
 CONFIG_INSTALL_LIBSTDCPP=y
 # CONFIG_INSTALL_LIBGCJ is not set
@@ -1742,7 +1742,7 @@ CONFIG_PACKAGE_kmod-ledtrig-default-on=y
 # CONFIG_PACKAGE_kmod-ledtrig-morse is not set
 CONFIG_PACKAGE_kmod-ledtrig-netdev=y
 # CONFIG_PACKAGE_kmod-ledtrig-netfilter is not set
-CONFIG_PACKAGE_kmod-ledtrig-timer=y
+# CONFIG_PACKAGE_kmod-ledtrig-timer is not set
 CONFIG_PACKAGE_kmod-ledtrig-usbdev=y
 
 #
@@ -1775,7 +1775,7 @@ CONFIG_PACKAGE_kmod-nls-base=y
 # CONFIG_PACKAGE_kmod-nls-iso8859-15 is not set
 # CONFIG_PACKAGE_kmod-nls-iso8859-2 is not set
 # CONFIG_PACKAGE_kmod-nls-koi8r is not set
-# CONFIG_PACKAGE_kmod-nls-utf8 is not set
+CONFIG_PACKAGE_kmod-nls-utf8=y
 
 #
 # Netfilter Extensions
