--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r37768)
-# Tue Aug 20 01:38:32 2013
+# Tue Aug 20 18:22:24 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -381,7 +381,7 @@ CONFIG_TARGET_ar71xx_generic_TLWR1043=y
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_TARGET_BOARD="ar71xx"
 CONFIG_TARGET_ARCH_PACKAGES="ar71xx"
-CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -msym32"
+CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -msym32 -mplt"
 CONFIG_LINUX_3_3=y
 CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_busybox=y
@@ -509,7 +509,7 @@ CONFIG_KERNEL_GIT_LOCAL_REPOSITORY=""
 # CONFIG_BUILD_LOG is not set
 # CONFIG_SRC_TREE_OVERRIDE is not set
 CONFIG_TARGET_OPTIONS=y
-CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -msym32"
+CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -msym32 -mplt"
 CONFIG_SOFT_FLOAT=y
 # CONFIG_EXTERNAL_TOOLCHAIN is not set
 CONFIG_NEED_TOOLCHAIN=y
@@ -524,7 +524,7 @@ CONFIG_TOOLCHAINOPTS=y
 # CONFIG_BINUTILS_VERSION_2_21 is not set
 # CONFIG_BINUTILS_VERSION_2_21_1 is not set
 CONFIG_BINUTILS_VERSION_2_22=y
-CONFIG_EXTRA_BINUTILS_CONFIG_OPTIONS=""
+CONFIG_EXTRA_BINUTILS_CONFIG_OPTIONS="--disable-nls"
 CONFIG_BINUTILS_VERSION="2.22"
 
 #
@@ -534,11 +534,11 @@ CONFIG_BINUTILS_VERSION="2.22"
 # CONFIG_GCC_VERSION_4_6_2 is not set
 # CONFIG_GCC_VERSION_4_7_0 is not set
 # CONFIG_GCC_VERSION_4_5_LINARO is not set
-CONFIG_GCC_VERSION_4_6_LINARO=y
-# CONFIG_GCC_VERSION_4_7_LINARO is not set
+# CONFIG_GCC_VERSION_4_6_LINARO is not set
+CONFIG_GCC_VERSION_4_7_LINARO=y
 # CONFIG_GCC_VERSION_LLVM is not set
 # CONFIG_GCC_USE_GRAPHITE is not set
-CONFIG_EXTRA_GCC_CONFIG_OPTIONS=""
+CONFIG_EXTRA_GCC_CONFIG_OPTIONS="--disable-nls"
 # CONFIG_SSP_SUPPORT is not set
 # CONFIG_TLS_SUPPORT is not set
 # CONFIG_SJLJ_EXCEPTIONS is not set
@@ -560,8 +560,8 @@ CONFIG_UCLIBC_VERSION_0_9_33=y
 # CONFIG_GDB is not set
 # CONFIG_INSIGHT is not set
 CONFIG_GCC_DEFAULT_VERSION_4_6_LINARO=y
-CONFIG_GCC_VERSION="4.6-linaro"
-CONFIG_GCC_VERSION_4_6=y
+CONFIG_GCC_VERSION="4.7-linaro"
+CONFIG_GCC_VERSION_4_7=y
 CONFIG_UCLIBC_VERSION="0.9.33.2"
 CONFIG_LIBC="uClibc"
 CONFIG_LIBC_VERSION="0.9.33.2"
@@ -646,7 +646,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_HAVE_RPC=y
 # CONFIG_BUSYBOX_CONFIG_PIE is not set
 CONFIG_BUSYBOX_CONFIG_LFS=y
 CONFIG_BUSYBOX_CONFIG_CROSS_COMPILER_PREFIX=""
-CONFIG_BUSYBOX_CONFIG_EXTRA_CFLAGS="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -msym32"
+CONFIG_BUSYBOX_CONFIG_EXTRA_CFLAGS="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -msym32 -mplt"
 
 #
 # Debugging Options
@@ -1775,7 +1775,7 @@ CONFIG_PACKAGE_kmod-nls-base=y
 # CONFIG_PACKAGE_kmod-nls-iso8859-15 is not set
 # CONFIG_PACKAGE_kmod-nls-iso8859-2 is not set
 # CONFIG_PACKAGE_kmod-nls-koi8r is not set
-CONFIG_PACKAGE_kmod-nls-utf8=y
+# CONFIG_PACKAGE_kmod-nls-utf8 is not set
 
 #
 # Netfilter Extensions
