--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r37768)
-# Tue Aug 20 18:22:24 2013
+# Wed Aug 21 09:00:06 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -381,7 +381,7 @@ CONFIG_TARGET_ar71xx_generic_TLWR1043=y
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_TARGET_BOARD="ar71xx"
 CONFIG_TARGET_ARCH_PACKAGES="ar71xx"
-CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -msym32 -mplt"
+CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32"
 CONFIG_LINUX_3_3=y
 CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_busybox=y
@@ -509,7 +509,7 @@ CONFIG_KERNEL_GIT_LOCAL_REPOSITORY=""
 # CONFIG_BUILD_LOG is not set
 # CONFIG_SRC_TREE_OVERRIDE is not set
 CONFIG_TARGET_OPTIONS=y
-CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -msym32 -mplt"
+CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32"
 CONFIG_SOFT_FLOAT=y
 # CONFIG_EXTERNAL_TOOLCHAIN is not set
 CONFIG_NEED_TOOLCHAIN=y
@@ -646,7 +646,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_HAVE_RPC=y
 # CONFIG_BUSYBOX_CONFIG_PIE is not set
 CONFIG_BUSYBOX_CONFIG_LFS=y
 CONFIG_BUSYBOX_CONFIG_CROSS_COMPILER_PREFIX=""
-CONFIG_BUSYBOX_CONFIG_EXTRA_CFLAGS="-Os -pipe -mips32r2 -mtune=24kc -mgp32 -mno-mips16 -mno-branch-likely -fno-caller-saves -msym32 -mplt"
+CONFIG_BUSYBOX_CONFIG_EXTRA_CFLAGS=""
 
 #
 # Debugging Options
@@ -1813,7 +1813,7 @@ CONFIG_PACKAGE_kmod-ipt-ipset=y
 # CONFIG_PACKAGE_kmod-ipt-lscan is not set
 # CONFIG_PACKAGE_kmod-ipt-lua is not set
 CONFIG_PACKAGE_kmod-ipt-nat=y
-CONFIG_PACKAGE_kmod-ipt-nat-extra=y
+# CONFIG_PACKAGE_kmod-ipt-nat-extra is not set
 CONFIG_PACKAGE_kmod-ipt-nathelper=y
 # CONFIG_PACKAGE_kmod-ipt-nathelper-extra is not set
 # CONFIG_PACKAGE_kmod-ipt-nathelper-rtsp is not set
@@ -2018,7 +2018,7 @@ CONFIG_PACKAGE_kmod-usb-serial-option=y
 CONFIG_PACKAGE_kmod-usb-serial-wwan=y
 # CONFIG_PACKAGE_kmod-usb-sierrawireless-directip is not set
 CONFIG_PACKAGE_kmod-usb-storage=y
-CONFIG_PACKAGE_kmod-usb-storage-extras=y
+# CONFIG_PACKAGE_kmod-usb-storage-extras is not set
 # CONFIG_PACKAGE_kmod-usb-test is not set
 # CONFIG_PACKAGE_kmod-usb-uhci is not set
 # CONFIG_PACKAGE_kmod-usb-yealink is not set
@@ -2700,7 +2700,7 @@ CONFIG_PACKAGE_iptables-mod-ipset=y
 # CONFIG_PACKAGE_iptables-mod-logmark is not set
 # CONFIG_PACKAGE_iptables-mod-lscan is not set
 # CONFIG_PACKAGE_iptables-mod-lua is not set
-CONFIG_PACKAGE_iptables-mod-nat-extra=y
+# CONFIG_PACKAGE_iptables-mod-nat-extra is not set
 # CONFIG_PACKAGE_iptables-mod-psd is not set
 # CONFIG_PACKAGE_iptables-mod-quota2 is not set
 # CONFIG_PACKAGE_iptables-mod-rawnat is not set
