--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r37768)
-# Wed Aug 21 09:00:06 2013
+# Fri Aug 23 20:09:06 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -381,7 +381,7 @@ CONFIG_TARGET_ar71xx_generic_TLWR1043=y
 CONFIG_HAS_SUBTARGETS=y
 CONFIG_TARGET_BOARD="ar71xx"
 CONFIG_TARGET_ARCH_PACKAGES="ar71xx"
-CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32"
+CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -march=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32"
 CONFIG_LINUX_3_3=y
 CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_busybox=y
@@ -509,7 +509,7 @@ CONFIG_KERNEL_GIT_LOCAL_REPOSITORY=""
 # CONFIG_BUILD_LOG is not set
 # CONFIG_SRC_TREE_OVERRIDE is not set
 CONFIG_TARGET_OPTIONS=y
-CONFIG_TARGET_OPTIMIZATION="-Os -pipe -mips32r2 -mtune=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32"
+CONFIG_TARGET_OPTIMIZATION="-Os -pipe -march=24kc -mno-mips16 -mno-branch-likely -fno-caller-saves -mplt -mgp32 -msym32"
 CONFIG_SOFT_FLOAT=y
 # CONFIG_EXTERNAL_TOOLCHAIN is not set
 CONFIG_NEED_TOOLCHAIN=y
@@ -538,9 +538,9 @@ CONFIG_BINUTILS_VERSION="2.22"
 CONFIG_GCC_VERSION_4_7_LINARO=y
 # CONFIG_GCC_VERSION_LLVM is not set
 # CONFIG_GCC_USE_GRAPHITE is not set
-CONFIG_EXTRA_GCC_CONFIG_OPTIONS="--disable-nls"
+CONFIG_EXTRA_GCC_CONFIG_OPTIONS="--disable-nls --enable-threads=posix"
 # CONFIG_SSP_SUPPORT is not set
-# CONFIG_TLS_SUPPORT is not set
+CONFIG_TLS_SUPPORT=y
 # CONFIG_SJLJ_EXCEPTIONS is not set
 CONFIG_INSTALL_LIBSTDCPP=y
 # CONFIG_INSTALL_LIBGCJ is not set
