--- a/feeds/packages/net/lighttpd/files/lighttpd.conf
+++ b/feeds/packages/net/lighttpd/files/lighttpd.conf
@@ -15,7 +15,17 @@ $SERVER["socket"] == ":80" {
 }
 
 #$SERVER["socket"] == "[::]:80" {
-#        server.use-ipv6 = "enable"
+#server.use-ipv6 = "enable"
+#}
+
+#$SERVER["socket"] == ":443" {
+#ssl.engine = "enable"
+#ssl.pemfile = "/etc/lighttpd/ssl/www.example.org.pem"
+#}
+
+#$SERVER["socket"] == "[::]:443" {
+#ssl.engine = "enable"
+#ssl.pemfile = "/etc/lighttpd/ssl/www.example.org.pem"
 #}
 
 server.errorlog-use-syslog = "enable"
@@ -23,24 +33,24 @@ server.errorlog-use-syslog = "enable"
 index-file.names = ( "index.html", "default.html", "index.htm", "default.htm" )
 
 mimetype.assign = (  
-	".pdf"   => "application/pdf",
-	".class" => "application/octet-stream",
-	".pac"   => "application/x-ns-proxy-autoconfig",
-	".swf"   => "application/x-shockwave-flash",
-	".wav"   => "audio/x-wav",
+#	".pdf"   => "application/pdf",
+#	".class" => "application/octet-stream",
+#	".pac"   => "application/x-ns-proxy-autoconfig",
+#	".swf"   => "application/x-shockwave-flash",
+#	".wav"   => "audio/x-wav",
 	".gif"   => "image/gif",
-	".jpg"   => "image/jpeg",
-	".jpeg"  => "image/jpeg",
+#	".jpg"   => "image/jpeg",
+#	".jpeg"  => "image/jpeg",
 	".png"   => "image/png",
-	".svg"   => "image/svg+xml",
+#	".svg"   => "image/svg+xml",
 	".css"   => "text/css",
 	".html"  => "text/html",
 	".htm"   => "text/html",
 	".js"    => "text/javascript",
 	".txt"   => "text/plain",
-	".dtd"   => "text/xml",
-	".xml"   => "text/xml"
- )
+#	".dtd"   => "text/xml",
+#	".xml"   => "text/xml"
+)
 
 $HTTP["url"] =~ "\.pdf$" {
 	server.range-requests = "disable"
