Update gitignore to add packages

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /bin/ar71xx/*
 !/bin/ar71xx/openwrt-ar71xx-generic-tl-wr1043nd-v1*.bin
 !/bin/ar71xx/md5sum.txt
+!/bin/ar71xx/packages/*
 /build_dir
 /staging_dir
 /tmp
