--- a/feeds/packages/net/lighttpd/files/lighttpd.conf
+++ b/feeds/packages/net/lighttpd/files/lighttpd.conf
@@ -36,7 +36,7 @@ mimetype.assign = (
 #	".jpg"   => "image/jpeg",
 #	".jpeg"  => "image/jpeg",
 	".png"   => "image/png",
-#	".svg"   => "image/svg+xml",
+	".svg"   => "image/svg+xml",
 	".css"   => "text/css",
 	".html"  => "text/html",
 	".htm"   => "text/html",
