--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # OpenWrt version: Attitude Adjustment (r38455)
-# Sat Oct 19 14:53:54 2013
+# Sun Oct 20 21:48:59 2013
 #
 CONFIG_HAVE_DOT_CONFIG=y
 # CONFIG_TARGET_ppc40x is not set
@@ -2570,7 +2570,7 @@ CONFIG_PACKAGE_libvorbis=y
 # CONFIG_PACKAGE_taglib is not set
 # CONFIG_PACKAGE_taglibc is not set
 # CONFIG_PACKAGE_terminfo is not set
-# CONFIG_PACKAGE_uclibcxx is not set
+CONFIG_PACKAGE_uclibcxx=m
 # CONFIG_PACKAGE_ustl is not set
 # CONFIG_PACKAGE_wt is not set
 # CONFIG_PACKAGE_xmlrpc-c is not set
@@ -3079,7 +3079,7 @@ CONFIG_PACKAGE_xl2tpd=y
 # CONFIG_PACKAGE_axhttpd is not set
 # CONFIG_PACKAGE_axtlswrap is not set
 # CONFIG_PACKAGE_crowdcontrol is not set
-# CONFIG_PACKAGE_dansguardian is not set
+CONFIG_PACKAGE_dansguardian=m
 # CONFIG_PACKAGE_haproxy is not set
 # CONFIG_PACKAGE_hiawatha is not set
 CONFIG_PACKAGE_lighttpd=y
